Se modifico el diseño para escritorio y se escribio la documentacion de las paginas existentes

--- a/src/pages/mprincipal/mprincipal.scss
+++ b/src/pages/mprincipal/mprincipal.scss
@@ -1,4 +1,5 @@
 page-mprincipal {
+    
     .texto{
         .titulo{
             text-align: center;
@@ -6,7 +7,7 @@ page-mprincipal {
             font-weight: 300;
         }
         .creditos{
-            text-align: left;
+            text-align: center;
             font-size: 15pt;
             font-weight: 300;
             margin-top: 50px;
